[metadata]
name = fable-circuits
version = 0.1.1
author = Daan Camps
author_email = daancamps@gmail.com
description = Fast Approximate Block Encoding Circuits
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/QuantumComputingLab/fable
project_urls =
Bug Tracker = https://github.com/QuantumComputingLab/fable/issues

classifiers =
Programming Language :: Python :: 3
License :: BSD
Operating System :: OS Independent

[options]
package_dir =
   = py
packages = find:
python_requires = >=3.6
install_requires =
   qiskit>=0.19.1
   numpy>=1.20.3

[options.packages.find]
where = py